# simple-audio-player

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  org.simple.audio.player.desktop.cmake  qml.qrc  qmlenvironmentvariable.cpp  qmlenvironmentvariable.h
src/icons/: CMakeLists.txt
src/qml/: FileDelegate.qml  FilePage.qml  FolderListView.qml  FolderListViewDelegate.qml  FolderPage.qml  MusicPlayerListStyle.qml  PlayListDelegate.qml  PlayListModel.qml  main.qml
